Fix spacing and add title in post metadata

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,5 @@
 /* Vous pouvez ajouter du CSS personnalisé ici. */
+
 .entry-header .entry-summary {
   margin-top: 0.25em;
   font-size: .9375rem;
@@ -335,3 +336,15 @@ div.sources {
 .footnotes p {
   margin: 0 0 .25em;
 }
+
+/* Post metadata. */
+
+.date-published,
+.date-modified {
+  margin-right: 1.5em;
+}
+
+.entry-meta {
+  cursor: default;
+}
+
